--- a/README.org
+++ b/README.org
@@ -1,6 +1,16 @@
-#+TITLE: Readme
+#+TITLE: Triads
 
+* About
+A program for generating core triads and checking polymorphisms.
 * Installation
 * Usage
-* About
+Use ~--help~
+
+# Possible parameters for --polymorphism are "" and "".
+
+Example usage
+```
+./triads -p "binary commutative" -l 8
+```
 * License
+This program is released under the terms of the GNU General Public License v3.0.
