--- a/README.org
+++ b/README.org
@@ -2,12 +2,15 @@
 
 * About
 A program for generating core triads and checking polymorphisms.
+
 * Installation
+~git clone https://github.com/hlissner/doom-emacs.git
+cargo build~
+
 * Usage
 Use ~--help~
 
-# Possible parameters for --polymorphism are "" and "".
+Example usage: ~./triads -p commutative -l 8~
 
-Example usage: ~./triads -p "binary commutative" -l 8~
 * License
 This program is released under the terms of the GNU General Public License v3.0.
