--- a/triads.org
+++ b/triads.org
@@ -1,14 +1,7 @@
 * Deprecated
 ** TODO
 *** TODO Remove open files when crashing
-*** TODO Add break 'outer
-*** TODO Add consistency option
-**** TODO Add HashMap argument to search
-*** DONE Add consistency algo argument to search
 *** TODO Use &str, &[T] or &T to allow for more generic code.
-*** TODO Add negative flag
-*** DONE Add a --conservative flag
-$f(v_1,...,v_n) \in \{v_1,...,v_n\}$
 *** TODO Implement finding Core of Graph
 
 ** Code
@@ -433,6 +426,76 @@ impl<T: Eq + Hash + Clone + FromStr> AdjacencyList<T> {
         Ok(list)
     }
 }
+
+/// A set of lists for vertices of type `V0`, implemented as a wrapper struct
+/// around a `HashMap<V0, List<V1>>`.
+#[derive(Clone, Debug, Default)]
+pub struct Lists<V0: Eq + Hash, V1: Eq + Hash> {
+    lists: HashMap<V0, List<V1>>,
+}
+
+impl<V0: Eq + Hash, V1: Eq + Hash> Lists<V0, V1> {
+    /// Creates a new, empty set of lists.
+    pub fn new() -> Lists<V0, V1> {
+        Lists {
+            lists: HashMap::<V0, List<V1>>::new(),
+        }
+    }
+
+    /// Inserts a vertex-list pair into the map.
+    ///
+    /// If the map did not have this vertex present, [`None`] is returned.
+    ///
+    /// If the map did have this vertex present, the list is updated, and the old
+    /// list is returned. The vertex is not updated, though; this matters for
+    /// types that can be `==` without being identical.
+    pub fn insert(&mut self, v: V0, d: List<V1>) -> Option<List<V1>> {
+        self.lists.insert(v, d)
+    }
+
+    /// An iterator visiting all variable-list pairs in arbitrary order.
+    /// The iterator element type is `(&'a V0, &'a Set<V1>)`.
+    ///
+    pub fn iter<'a>(&'a self) -> impl Iterator<Item = (&V0, &List<V1>)> + 'a {
+        self.lists.iter()
+    }
+
+    /// An iterator visiting all lists in arbitrary order.
+    /// The iterator element type is `&'a Set<V1>`.
+    ///
+    pub fn lists(&self) -> impl Iterator<Item = &List<V1>> {
+        self.lists.values()
+    }
+
+    pub fn variables(&self) -> impl Iterator<Item = &V0> {
+        self.lists.keys()
+    }
+
+    pub fn get(&self, v: &V0) -> Option<&List<V1>> {
+        self.lists.get(v)
+    }
+
+    pub fn get_mut(&mut self, v: &V0) -> Option<&mut List<V1>> {
+        self.lists.get_mut(v)
+    }
+
+    pub fn remove(&mut self, v: &V0, w: &V1) -> bool {
+        self.lists.get_mut(&v).unwrap().remove(w)
+    }
+
+    pub fn contains_variable(&self, v: &V0) -> bool {
+        self.lists.contains_key(v)
+    }
+}
+
+impl<V0: Eq + Hash, V1: Eq + Hash> IntoIterator for Lists<V0, V1> {
+    type Item = (V0, List<V1>);
+    type IntoIter = std::collections::hash_map::IntoIter<V0, List<V1>>;
+
+    fn into_iter(self) -> Self::IntoIter {
+        self.lists.into_iter()
+    }
+}
 #+end_src
 
 * TODO
@@ -447,20 +510,30 @@ triads up to a certain size n.
 Do all the above, but restrict to idempotent polymorphisms. In this case, we no longer
 restrict our attention to core triads, but consider all triads on a given number of vertices.
 
-** TODO Polymorphism::tryfrom(Domains)
-** TODO Document every function
-** TODO Activate lints
+** TODO Make PolymorphismFinder own a reference to the algorithm
+** TODO Write tests
+** TODO Generate all triads with constraint
 
 * Results
-| Triad                   | AC3     | SAC2       | Majority? |
-|-------------------------+---------+------------+-----------|
-| 0,0,0                   | 3 s     | 2 s        | j         |
-| 01,00,10                | 9 s     | 2:48 m     | j         |
-| 011,00,10               | 4 s     | 36:00+ m   | j         |
-| 011,011,101             | 5 s     | 1:27:00+ h | j         |
-| 01100,01110,10100       | 1:04 m  | ?          | j         |
-| 10110000,1001111,01011  | 13:42 m | ?          | j         |
-| 10110000,1001111,010111 | 3 s     | ?          | n         |
+** Times
+| Knoten | sac1                            | sac_opt                         | sac1/sac_opt |
+|--------+---------------------------------+---------------------------------+--------------|
+|      4 | [20.853 us 20.857 us 20.860 us] | [25.945 us 25.964 us 25.995 us] |          0.8 |
+|      5 | [27.746 us 27.780 us 27.833 us] | [32.526 us 32.544 us 32.566 us] |         0.85 |
+|      6 | [46.482 us 46.504 us 46.535 us] | [53.890 us 53.904 us 53.917 us] |         0.86 |
+|      7 | [88.444 us 88.464 us 88.484 us] | [103.31 us 103.35 us 103.40 us] |         0.85 |
+|     13 | [397.25 us 397.46 us 397.68 us] | [454.68 us 454.99 us 455.34 us] |         0.87 |
+|        |                                 |                                 |              |
+
+** Misc
+- Falls CSP(T) in NP => AC 1. Durchlauf Lösung bei Suche nach 3wnu
+- Falls CSP(T) in P => AC = SAC?
+- Falls CSP(T) in P => löst AC das CSP(T)?
+
+** Vermutungen
+- Falls für Triads AC = SAC
+- && Falls Bulin stimmt
+- löst AC CSP(T), falls CSP(T) in P.
 
 * Micha
 - Domains Data Structure
